# RootQuest

./: .gitignore  CLAUDE.md  PROJECT.md  README.md  meson.build  project-checklist.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
apps/: meson.build
apps/app/: main.c  meson.build
libs/: meson.build
libs/character/: character.h  meson.build
libs/character_generator/: character_generator.c  character_generator.h  meson.build  stat_generator.c  stat_generator.h
libs/my_lib/: meson.build  my_lib.c  my_lib.h
libs/world_tracker/: meson.build  world_tracker.c  world_tracker.h
tests/: meson.build
tests/my_lib_test/: meson.build  test_my_lib.c
